--- a/klepdicht/static/css/styles.css
+++ b/klepdicht/static/css/styles.css
@@ -12,6 +12,10 @@ body {
 /*    font-style: italic;*/
 /*}*/
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .new_message {
   color: black;
   font-family: sans-serif;
@@ -41,14 +45,6 @@ body {
   width: 100px;
   font-size: 20px;
   color: #fff;
-    --_d: 100%;
-    -webkit-mask:
-    radial-gradient(var(--t) at var(--_d) 0,#0000 98%,#000 102%)
-      var(--_d) 100%/calc(100% - var(--r)) var(--t) no-repeat,
-    conic-gradient(at var(--r) var(--r),#000 75%,#0000 0)
-      calc(var(--r)/-2) calc(var(--r)/-2) padding-box,
-    radial-gradient(50% 50%,#000 98%,#0000 101%)
-      0 0/var(--r) var(--r) space padding-box;
 }
 
 .loginbutton {
