--- a/klepdicht/templates/room.html.jinja
+++ b/klepdicht/templates/room.html.jinja
@@ -1,13 +1,14 @@
 {% extends 'base.html.jinja' %}
 {% block main %}
     <div id="messages">
-        <div>
+        <div class="nowrap">
             <input type="text" name="message" id="message" class="new_message bubble">
             <button type="button" id="send" class="bubble sendbutton">Send</button>
             <button type="button" id="exit" class="bubble exitbutton">X</button>
-            {% if session and session.user and session.user.username == "admin" %}
-            <a href="{{ url_for('admin.ylva_admin') }}" class="bubble exitbutton">Admin</a>
-            {% endif %}
+        {% if session and session.user and session.user.username == "admin" %}
+            <a href="{{ url_for('admin.ylva_admin') }}" class="bubble exitbutton">A</a>
+        {% endif %}
+
         </div>
         <div id="empty_message" class="bubble empty_message">No messages in this room</div>
         <div id="bottom"></div>
